added new versions for yt slack post

--- a/plot_mass_fractions_walker.ipynb
+++ b/plot_mass_fractions_walker.ipynb
@@ -56,8 +56,8 @@
    "source": [
     "snapshots = [99,84,78,72,67,59,50,40,33,25,21,17]#,13,11,8,6,4,3,2]\n",
     "\n",
-    "chunks = [0,1,2,3,4,5,6] #each TNG100-3 snapshot has chunks running from 0 to 6 inclusive\n",
-    "#chunks = [0] #Note that YT loads the entire simulation even when you specify a certain chunk\n",
+    "#chunks = [0,1,2,3,4,5,6] #each TNG100-3 snapshot has chunks running from 0 to 6 inclusive\n",
+    "chunks = [0] #Note that YT loads the entire simulation even when you specify a certain chunk\n",
     "             #so you don't have to load each one individually.\n",
     "    \n",
     "TNGversion = 3 # 1=TNG100-1, 2=TNG100-2, 3=TNG100-3"
@@ -457,7 +457,7 @@
     "\n",
     "\n",
     "plt.legend(fontsize=15)\n",
-    "plt.savefig('evolving_mass_fraction_TNG100-{0}_walker.png'.format(TNGversion))\n",
+    "plt.savefig('evolving_mass_fraction_TNG100-{0}_walker_onechunk.png'.format(TNGversion))\n",
     "plt.show()"
    ]
   },
