--- a/plot_mass_fractions_artale.ipynb
+++ b/plot_mass_fractions_artale.ipynb
@@ -38,7 +38,34 @@
     "from astropy import units as u\n",
     "from astropy import constants as c\n",
     "from yt.utilities.cosmology import Cosmology\n",
-    "from matplotlib import pyplot as plt\n"
+    "from matplotlib import pyplot as plt\n",
+    "import sys\n",
+    "import h5py\n",
+    "from constants import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getField(snapFile,partType,fieldName,toDouble=False):\n",
+    "        if toDouble==False:\n",
+    "                return snapFile[partType][fieldName][:]\n",
+    "        if toDouble==True:\n",
+    "                return snapFile[partType][fieldName][:].astype('f8')\n",
+    "\n",
+    "\n",
+    "def gadgetDens2SI(dens):\n",
+    "        return dens*1E10*Msol_si/hubble/(kpc_si/hubble)**3"
    ]
   },
   {
@@ -56,10 +83,10 @@
    "source": [
     "snapshots = [99,84,78,72,67,59,50,40,33,25,21,17]#,13,11,8,6,4,3,2]\n",
     "\n",
-    "chunks = [0,1,2,3,4,5,6] #each TNG100-3 snapshot has chunks running from 0 to 6 inclusive\n",
-    "#chunks = [0] #Note that YT loads the entire simulation even when you specify a certain chunk\n",
-    "             #so you don't have to load each one individually.\n",
-    "    \n",
+    "#chunks = [0,1,2,3,4,5,6] #each TNG100-3 snapshot has chunks running from 0 to 6 inclusive\n",
+    "#chunks = np.arange(0,55) #each TNG100-2 snapshot has chunks running froom 0 to 55 inclusive\n",
+    "chunks = np.arange(0,447) #each TNG100-1 snapshot has chunks running from 0 to 447 inclusive\n",
+    "\n",
     "TNGversion = 3 # 1=TNG100-1, 2=TNG100-2, 3=TNG100-3"
    ]
   },
@@ -161,26 +188,26 @@
     "        #####################\n",
     "\n",
     "        data='/virgo/simulations/IllustrisTNG/TNG100-{2}/output/snapdir_0{0:02d}/snap_0{0:02d}.{1}.hdf5'.format(snapshot,chunk,TNGversion)\n",
+    "        #data='/virgo/simulations/IllustrisTNG/L75n455TNG/output/snapdir_0{0:02d}/snap_0{0:02d}.{1}.hdf5'.format(snapshot,chunk,TNGversion)\n",
     "        print('loading dataset: {0}'.format(data))\n",
-    "        ds=yt.load(data)\n",
-    "        ds.index\n",
-    "        ad = ds.all_data()\n",
+    "        snapFile = h5py.File(data,'r')\n",
     "        \n",
     "        #difference 1: loading the gas and star masses\n",
-    "        gasMass = ad['PartType0','Masses']\n",
-    "        stellarMass = ad['PartType4','Masses']\n",
-    "\n",
+    "        gasMass = getField(snapFile,'PartType0','Masses',toDouble=True)\n",
+    "        stellarMass = getField(snapFile,'PartType4','Masses',toDouble=True)\n",
+    "        \n",
     "        print('data loaded.')\n",
     "\n",
     "        ####################################\n",
     "        #define proton mass in solar masses#\n",
     "        ####################################\n",
     "\n",
-    "        print('calculating proton mass:')\n",
-    "        m_p = ds.quan((c.m_p).to(u.solMass).value,'Msun')\n",
-    "        print ('proton mass: {0}'.format(m_p))\n",
-    "        m_p_array.append(m_p)\n",
+    "        #print('calculating proton mass:')\n",
+    "        #m_p = ds.quan((c.m_p).to(u.solMass).value,'Msun')\n",
+    "        #print ('proton mass: {0}'.format(m_p))\n",
+    "        #m_p_array.append(m_p)\n",
     "\n",
+    "        #ds.index\n",
     "\n",
     "        ############################################\n",
     "        #calculate critical density of the Universe#\n",
@@ -201,20 +228,25 @@
     "        ##dens_crit_current = ((3 * (co.hubble_parameter(header['Redshift'])**2))/(8*np.pi*grav))\n",
     "        ##print('Current critical density is {0}'.format(dens_crit_current))\n",
     "        ##print('...in kg/m^3: {0}'.format(dens_crit_current.in_units('kg/m**3')))\n",
+    "\n",
+    "        #ad = ds.all_data()\n",
     "        \n",
-    "        dens_crit = 8.61975454419e-27 *ds.quan(1,\"kg/m**3\")#Celeste:extracted from \"constant.py\"\n",
+    "        dens_crit = 8.61975454419e-27 #Celeste:extracted from \"constant.py\"\n",
     "        hubble = 0.677\n",
+    "\n",
     "\n",
     "        ##########################################################\n",
     "        #convert dark matter density to units of critical density#\n",
     "        ##########################################################\n",
-    "\n",
-    "        #difference 2: unit conversion\n",
     "        \n",
+    "        #difference 2: unit conversion\n",
+    "\n",
     "        #PartType0 (gas)\n",
-    "        dark_units_PT0 = ad['PartType0','SubfindDMDensity']*ds.quan(1e10,\"(Msun/h)/((code_length)**3)\")/dens_crit\n",
+    "        dark_units_PT0 = getField(snapFile,'PartType0','SubfindDMDensity',toDouble=True)\n",
+    "        dark_units_PT0 = gadgetDens2SI(dark_units_PT0)/dens_crit\n",
     "        #PartType4 (stars)\n",
-    "        dark_units_PT4 = ad['PartType4','SubfindDMDensity']*ds.quan(1e10,\"(Msun/h)/((code_length)**3)\")/dens_crit\n",
+    "        dark_units_PT4 = getField(snapFile,'PartType4','SubfindDMDensity',toDouble=True)\n",
+    "        dark_units_PT4=gadgetDens2SI(dark_units_PT4)/dens_crit\n",
     "        print('Dark units are: {0} /n {1}'.format(dark_units_PT0,dark_units_PT4))\n",
     "\n",
     "        ###############################################################\n",
@@ -431,7 +463,7 @@
     "fil_frac = (fil_PT14_arr_summed)/(tot_PT14_arr_summed)\n",
     "voi_frac = (voi_PT14_arr_summed)/(tot_PT14_arr_summed)\n",
     "\n",
-    "print(hal_frac.shape)"
+    "print(hal_frac)"
    ]
   },
   {
@@ -457,7 +489,7 @@
     "\n",
     "\n",
     "plt.legend(fontsize=15)\n",
-    "plt.savefig('evolving_mass_fraction_TNG100-{0}_walker.png'.format(TNGversion))\n",
+    "plt.savefig('evolving_mass_fraction_TNG100-{0}_artale.png'.format(TNGversion))\n",
     "plt.show()"
    ]
   },
@@ -480,6 +512,13 @@
     "\n",
     "print(fil_frac+hal_frac+voi_frac)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
